# focus

./: IMPLEMENTATION_PLAN.md  README.md  SPEC.md  app.js  index.html  manifest.json  pyproject.toml  style.css  sw.js
docs/plans/: 2026-03-11-calendar-ux-design.md  2026-03-11-calendar-ux-impl.md
ralph/: goals.json  progress.txt  prompt.md
scripts/: ralph-loop.sh
src/task_manager/: cli.py  models.py  storage.py
tests/: test_storage.py
