[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
task = "task_manager.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
